# 2do-mcp

./: .gitignore  README.md  pyproject.toml
evaluations/: eval.xml
src/twodo_mcp/: __init__.py  server.py
tests/: test_input_validation.py  test_tools.py  test_url_builder.py
